// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Filter displays correct translations 1`] = `
<div>
  <span>
    Show fertig
  </span>
  <label
    htmlFor="todoStateSwitch"
  >
    <span
      className="MuiSwitch-root-1"
    >
      <span
        aria-label={undefined}
        className="MuiButtonBase-root-21 MuiIconButton-root-15 MuiSwitchBase-root-10 MuiSwitchBase-default-12 MuiSwitch-default-5"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role={undefined}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-20"
        >
          <span
            className="MuiSwitch-icon-3"
          />
          <input
            checked={false}
            className="MuiSwitchBase-input-11"
            disabled={undefined}
            id="todoStateSwitch"
            name={undefined}
            onChange={[Function]}
            tabIndex={undefined}
            type="checkbox"
            value={undefined}
          />
        </span>
        <span
          className="MuiTouchRipple-root-23"
        />
      </span>
      <span
        className="MuiSwitch-bar-2"
      />
    </span>
  </label>
</div>
`;

exports[`A Filter renders component 1`] = `
<div>
  <span>
    Show Done
  </span>
  <label
    htmlFor="todoStateSwitch"
  >
    <span
      className="MuiSwitch-root-1"
    >
      <span
        aria-label={undefined}
        className="MuiButtonBase-root-21 MuiIconButton-root-15 MuiSwitchBase-root-10 MuiSwitchBase-default-12 MuiSwitch-default-5"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role={undefined}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-20"
        >
          <span
            className="MuiSwitch-icon-3"
          />
          <input
            checked={false}
            className="MuiSwitchBase-input-11"
            disabled={undefined}
            id="todoStateSwitch"
            name={undefined}
            onChange={[Function]}
            tabIndex={undefined}
            type="checkbox"
            value={undefined}
          />
        </span>
        <span
          className="MuiTouchRipple-root-23"
        />
      </span>
      <span
        className="MuiSwitch-bar-2"
      />
    </span>
  </label>
</div>
`;

exports[`A Filter selects a button based on the value of its 'filter' prop 1`] = `
<div>
  <span>
    Show Done
  </span>
  <label
    htmlFor="todoStateSwitch"
  >
    <span
      className="MuiSwitch-root-1"
    >
      <span
        aria-label={undefined}
        className="MuiButtonBase-root-21 MuiIconButton-root-15 MuiSwitchBase-root-10 MuiSwitchBase-default-12 MuiSwitch-default-5 MuiSwitchBase-checked-13 MuiSwitch-checked-6 MuiSwitch-checkedPrimary-7"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role={undefined}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-20"
        >
          <span
            className="MuiSwitch-icon-3 MuiSwitch-iconChecked-4"
          />
          <input
            checked={true}
            className="MuiSwitchBase-input-11"
            disabled={undefined}
            id="todoStateSwitch"
            name={undefined}
            onChange={[Function]}
            tabIndex={undefined}
            type="checkbox"
            value={undefined}
          />
        </span>
        <span
          className="MuiTouchRipple-root-23"
        />
      </span>
      <span
        className="MuiSwitch-bar-2"
      />
    </span>
  </label>
</div>
`;
